--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         h1 {
             color: red;
         }
+        h2 {color: white;
+        }
+        h3 {color: white;
+        }
         p{
             color: white;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
