--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Valorant Personagens</title>
+    <title>Ordem Paranormal</title>
     <style>
         body {
             background-color: #111111;
@@ -23,7 +23,7 @@
         }
     </style>
 </head>
-<title>A Ordem Paranormal</title>
+<title>Ordem Paranormal</title>
 <p></p>
 <h1>Criado por cellbit</h1>
 <p>O Ordem Paranormal foi um RPG criado para jogar em live com os amigos interpretando os personagens de uma historia sobre o paranormal.</p>
